force-app/main/default/objects/VN_MetaParticipante__c/VN_MetaParticipante__c.object-meta.xml
<CustomObject>
    <description>Armazena as informações principais por participante.</description>
    <label>Meta do Participante</label>
    <nameField>
        <label>Ano Fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metas dos Participantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>