force-app/main/default/objects/VN_MetaParticipante__c/fields/Atualiza_Processo__c.field-meta.xml
<CustomField>
    <fullName>Atualiza_Processo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atualiza Processo</label>
    <type>Checkbox</type>
</CustomField>