force-app/main/default/objects/VN_MetaParticipante__c/fields/V_1QuarterAtingido__c.field-meta.xml
<CustomField>
    <fullName>V_1QuarterAtingido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1 Quarter Atingido</label>
    <type>Checkbox</type>
</CustomField>