force-app/main/default/objects/VN_MetaParticipante__c/fields/V_2QuartersAtingidos__c.field-meta.xml
<CustomField>
    <fullName>V_2QuartersAtingidos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 Quarters Atingidos</label>
    <type>Checkbox</type>
</CustomField>