force-app/main/default/objects/VN_MetaParticipante__c/fields/V_3QuartersAtingidos__c.field-meta.xml
<CustomField>
    <fullName>V_3QuartersAtingidos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 Quarters Atingidos</label>
    <type>Checkbox</type>
</CustomField>