force-app/main/default/objects/VN_MetaParticipante__c/fields/V_AMYTD__c.field-meta.xml
<CustomField>
    <fullName>V_AMYTD__c</fullName>
    <description>Campo preenchido via workflow &apos;Atualiza % AM YTD na Meta&apos; que ao marcar o sumarizador como processar mecânicas, o valor do campo % AM YTD no sumarizador é copiado para este campo.</description>
    <label>% AM YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>