force-app/main/default/objects/VN_MetaParticipante__c/fields/V_AMYTDAnterior__c.field-meta.xml
<CustomField>
    <fullName>V_AMYTDAnterior__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor do % AM YTD Anterior do mês anterior</description>
    <inlineHelpText>Valor do % AM YTD Anterior do mês anterior</inlineHelpText>
    <label>% AM YTD Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>