force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Ano__c.field-meta.xml
<CustomField>
    <fullName>V_Ano__c</fullName>
    <description>Exibe o ano do campo &quot;Ano Fiscal&quot; para ser utilizado como indicador de ano fiscal mais recente.</description>
    <formula>VALUE(RIGHT(Name,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exibe o ano do campo &quot;Ano Fiscal&quot; para ser utilizado como indicador de ano fiscal mais recente.</inlineHelpText>
    <label>Ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>