force-app/main/default/objects/VN_MetaParticipante__c/fields/V_AnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ano fiscal da Meta do participante do participante</description>
    <label>Gerenciador Meta Participante AF</label>
    <referenceTo>VN_GerenciadorMetaParticipanteAF__c</referenceTo>
    <relationshipLabel>Metas dos Participantes</relationshipLabel>
    <relationshipName>VN_MetasParticipantes</relationshipName>
    <type>Lookup</type>
</CustomField>