force-app/main/default/objects/VN_MetaParticipante__c/fields/V_AnoFiscalConcluido__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscalConcluido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ano Fiscal Concluido</label>
    <type>Checkbox</type>
</CustomField>