force-app/main/default/objects/VN_MetaParticipante__c/fields/V_BUsAtingidasAF__c.field-meta.xml
<CustomField>
    <fullName>V_BUsAtingidasAF__c</fullName>
    <label>BUs Atingidas - AF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>