force-app/main/default/objects/VN_MetaParticipante__c/fields/V_DispararDinamize__c.field-meta.xml
<CustomField>
    <fullName>V_DispararDinamize__c</fullName>
    <description>Campo utilizado como gatilho do Dinamize. Preenchido com Sim quando houver a necessidade de disparo.</description>
    <formula>TEXT(V_Participante__r.FieloPLT__Program__r.V_DipararDinamize__c)</formula>
    <label>Disparar Dinamize</label>
    <type>Text</type>
</CustomField>