force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Email__c.field-meta.xml
<CustomField>
    <fullName>V_Email__c</fullName>
    <formula>V_Participante__r.FieloPLT__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>