force-app/main/default/objects/VN_MetaParticipante__c/fields/V_EmailMember__c.field-meta.xml
<CustomField>
    <fullName>V_EmailMember__c</fullName>
    <description>Campo contendo o e-mail do participante. Utilizado para disparos Dinamize, preenchido via workflow.</description>
    <inlineHelpText>Campo contendo o e-mail do participante. Utilizado para disparos Dinamize.</inlineHelpText>
    <label>Email Participante</label>
    <type>Email</type>
</CustomField>