force-app/main/default/objects/VN_MetaParticipante__c/fields/V_EvolucaoYoY__c.field-meta.xml
<CustomField>
    <fullName>V_EvolucaoYoY__c</fullName>
    <description>Percentual que será alimentado através de carga no último mês do ano fiscal.</description>
    <inlineHelpText>Percentual que será alimentado através de carga no último mês do ano fiscal.</inlineHelpText>
    <label>% Evolução YoY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>