force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Lance_Ganhador__c.field-meta.xml
<CustomField>
    <fullName>V_Lance_Ganhador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado quando o participante é ganhador do youbet- atualizado via process builder</description>
    <inlineHelpText>Marcado quando o participante é ganhador do youbet</inlineHelpText>
    <label>Lance Ganhador</label>
    <type>Checkbox</type>
</CustomField>