force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Meta__c.field-meta.xml
<CustomField>
    <fullName>V_Meta__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>