force-app/main/default/objects/VN_MetaParticipante__c/fields/V_MetaAF__c.field-meta.xml
<CustomField>
    <fullName>V_MetaAF__c</fullName>
    <label>Meta - AF</label>
    <summarizedField>VN_Sumarizador__c.V_Meta__c</summarizedField>
    <summaryForeignKey>VN_Sumarizador__c.V_MetaDoParticipante__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>