force-app/main/default/objects/VN_MetaParticipante__c/fields/V_MetaYTD__c.field-meta.xml
<CustomField>
    <fullName>V_MetaYTD__c</fullName>
    <label>Meta - YTD</label>
    <summarizedField>VN_Sumarizador__c.V_Meta__c</summarizedField>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_ProcessarMecanicas__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>VN_Sumarizador__c.V_MetaDoParticipante__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>