force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Nome__c.field-meta.xml
<CustomField>
    <fullName>V_Nome__c</fullName>
    <formula>V_Participante__r.V_NomeTratamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primeiro nome / Nome de Tratamento</label>
    <type>Text</type>
</CustomField>