force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Papel_SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>V_Papel_SalesPerson__c</fullName>
    <formula>TEXT( V_Participante__r.V_PapelSalesPersonYear__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel Sales Person of the Year</label>
    <type>Text</type>
</CustomField>