force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PapelElite__c.field-meta.xml
<CustomField>
    <fullName>V_PapelElite__c</fullName>
    <formula>TEXT(V_Participante__r.V_PapelElite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel Elite</label>
    <type>Text</type>
</CustomField>