force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PapelEliteText__c.field-meta.xml
<CustomField>
    <fullName>V_PapelEliteText__c</fullName>
    <description>Campo preenchido via process builder para acionar o calculo de Score Tamanho Carteira.</description>
    <inlineHelpText>Campo preenchido via process builder para acionar o calculo de Score Tamanho Carteira.</inlineHelpText>
    <label>Papel Elite Texto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>