force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PapelYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_PapelYoubet__c</fullName>
    <formula>TEXT(V_Participante__r.V_PapelYoubet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel Youbet</label>
    <type>Text</type>
</CustomField>