force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Participante__c.field-meta.xml
<CustomField>
    <fullName>V_Participante__c</fullName>
    <description>Participante relacionado à meta.</description>
    <inlineHelpText>Participante relacionado à meta.</inlineHelpText>
    <label>Participante</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Metas dos Participantes</relationshipLabel>
    <relationshipName>VN_MetasParticipantes1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>