force-app/main/default/objects/VN_MetaParticipante__c/fields/V_ParticRankingElite__c.field-meta.xml
<CustomField>
    <fullName>V_ParticRankingElite__c</fullName>
    <formula>AND(TEXT( V_Participante__r.FieloPLT__Status__c ) = &apos;Active&apos;,
TEXT( V_Participante__r.V_NovoContratado__c) = &apos;Não&apos;,
NOT(CONTAINS( UPPER( V_Participante__r.Name), &apos;TESTE&apos;)),
(V_PapelElite__c &lt;&gt; &apos;NÃO ELEGÍVEL&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participa Ranking Elite</label>
    <type>Checkbox</type>
</CustomField>