force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentialAtingimentoEquipe__c.field-meta.xml
<CustomField>
    <fullName>V_PercentialAtingimentoEquipe__c</fullName>
    <label>% Atingimento da Equipe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>