force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualAM1Trimestre__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAM1Trimestre__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% AM - 1º Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>