force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualAM2Trimestre__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAM2Trimestre__c</fullName>
    <label>% AM - 2º Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>