force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualAM_AF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAM_AF__c</fullName>
    <formula>IF(V_MetaAF__c == 0, 0, V_TotalVendasYTD__c / V_MetaAF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% AM AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>