force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualAMMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMMes__c</fullName>
    <label>% AM Mês</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>