force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualDinheiroNovoSPYAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualDinheiroNovoSPYAF__c</fullName>
    <label>% Dinheiro Novo SPY - AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>