force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualDQSSPYAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualDQSSPYAF__c</fullName>
    <label>% DQS SPY - AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>