force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualMetaYTD__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualMetaYTD__c</fullName>
    <formula>V_AMYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Meta YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>