force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualSEMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualSEMes__c</fullName>
    <label>% SE Mês</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>