force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PercentualSEYTD__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualSEYTD__c</fullName>
    <formula>IF(V_TotalVendasYTD__c == 0, 0, V_TotalVendasSEYTD__c / V_TotalVendasYTD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% SE - YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>