force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PerceuntualDisputaComercialAF__c.field-meta.xml
<CustomField>
    <fullName>V_PerceuntualDisputaComercialAF__c</fullName>
    <formula>V_TotalDisputaComercialAF__c / V_TotalVendasYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Disputa Comercial - AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>