force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Persona__c.field-meta.xml
<CustomField>
    <fullName>V_Persona__c</fullName>
    <label>Persona</label>
    <length>4</length>
    <type>Text</type>
</CustomField>