force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PosicaoRankingElite__c.field-meta.xml
<CustomField>
    <fullName>V_PosicaoRankingElite__c</fullName>
    <label>Posição Ranking Elite</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>