force-app/main/default/objects/VN_MetaParticipante__c/fields/V_PotencialCarteira__c.field-meta.xml
<CustomField>
    <fullName>V_PotencialCarteira__c</fullName>
    <description>Valor do Tamanho da Carteira do participante. O atual critério é o mesmo valor do total de metas do ano fiscal do participante.</description>
    <inlineHelpText>Valor do Tamanho da Carteira do participante. O atual critério é o mesmo valor do total de metas do ano fiscal do participante.</inlineHelpText>
    <label>Tamanho da Carteira</label>
    <summarizedField>VN_Sumarizador__c.V_Meta__c</summarizedField>
    <summaryForeignKey>VN_Sumarizador__c.V_MetaDoParticipante__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>