force-app/main/default/objects/VN_MetaParticipante__c/fields/V_QtdMesesComMetaRes1Semestre__c.field-meta.xml
<CustomField>
    <fullName>V_QtdMesesComMetaRes1Semestre__c</fullName>
    <label>Qtd Meses com Meta/Res. - 1º Semestre</label>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_Mes__c</field>
        <operation>equals</operation>
        <value>1, 2, 3, 4, 5, 6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_Meta__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_Valor__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>VN_Sumarizador__c.V_MetaDoParticipante__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>