force-app/main/default/objects/VN_MetaParticipante__c/fields/V_QtdMesesComMetaRes4Trimestre__c.field-meta.xml
<CustomField>
    <fullName>V_QtdMesesComMetaRes4Trimestre__c</fullName>
    <label>Qtd Meses com Meta/Res. - 4º Trimestre</label>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_Mes__c</field>
        <operation>equals</operation>
        <value>10, 11, 12</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_Meta__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_Valor__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>VN_Sumarizador__c.V_MetaDoParticipante__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>