force-app/main/default/objects/VN_MetaParticipante__c/fields/V_SaldoTotalBetcoinsmaior__c.field-meta.xml
<CustomField>
    <fullName>V_SaldoTotalBetcoinsmaior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saldo total de betcoins &gt;= 1000?</label>
    <type>Checkbox</type>
</CustomField>