force-app/main/default/objects/VN_MetaParticipante__c/fields/V_ScoreElite__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreElite__c</fullName>
    <formula>V_ScoreAtingimentoFY__c + V_ScoreSuperacaoFY__c + V_ScoreSuperacaoQ1__c + V_ScorePotencialCarteira__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Elite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>