force-app/main/default/objects/VN_MetaParticipante__c/fields/V_ScorePotencialCarteira__c.field-meta.xml
<CustomField>
    <fullName>V_ScorePotencialCarteira__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indica o score do tamanho da carteira do participante no ano fiscal.</description>
    <inlineHelpText>Indica o score do tamanho da carteira do participante no ano fiscal.</inlineHelpText>
    <label>Score Tamanho da Carteira</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>