force-app/main/default/objects/VN_MetaParticipante__c/fields/V_ScoreSuperacaoFY__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreSuperacaoFY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score de Superação FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>