force-app/main/default/objects/VN_MetaParticipante__c/fields/V_ScoreSuperacaoQ1__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreSuperacaoQ1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score de Superação Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>