force-app/main/default/objects/VN_MetaParticipante__c/fields/V_SuperacaoH1__c.field-meta.xml
<CustomField>
    <fullName>V_SuperacaoH1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Superação H1</label>
    <type>Checkbox</type>
</CustomField>