force-app/main/default/objects/VN_MetaParticipante__c/fields/V_SuperacaoQ1__c.field-meta.xml
<CustomField>
    <fullName>V_SuperacaoQ1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Superação Q1</label>
    <type>Checkbox</type>
</CustomField>