force-app/main/default/objects/VN_MetaParticipante__c/fields/V_SuperacaoQ2__c.field-meta.xml
<CustomField>
    <fullName>V_SuperacaoQ2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Superação Q2</label>
    <type>Checkbox</type>
</CustomField>