force-app/main/default/objects/VN_MetaParticipante__c/fields/V_SuperacaoQ3__c.field-meta.xml
<CustomField>
    <fullName>V_SuperacaoQ3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Superação Q3</label>
    <type>Checkbox</type>
</CustomField>