force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TOP103Trimestre__c.field-meta.xml
<CustomField>
    <fullName>V_TOP103Trimestre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOP 10 - 3º Trimestre</label>
    <type>Checkbox</type>
</CustomField>