force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TOP10AF__c.field-meta.xml
<CustomField>
    <fullName>V_TOP10AF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOP 10 - AF</label>
    <type>Checkbox</type>
</CustomField>