force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotalBetcoins__c.field-meta.xml
<CustomField>
    <fullName>V_TotalBetcoins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Betcoins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>