force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotaldeVendas1Semestre__c.field-meta.xml
<CustomField>
    <fullName>V_TotaldeVendas1Semestre__c</fullName>
    <label>Total de Vendas - 1º Semestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>