force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotaldeVendas2Semestre__c.field-meta.xml
<CustomField>
    <fullName>V_TotaldeVendas2Semestre__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total de Vendas - 2º Semestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>