force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotaldeVendas3Trimestre__c.field-meta.xml
<CustomField>
    <fullName>V_TotaldeVendas3Trimestre__c</fullName>
    <label>Total de Vendas - 3º Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>