force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotalMetas1Trimestre__c.field-meta.xml
<CustomField>
    <fullName>V_TotalMetas1Trimestre__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Metas - 1º Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>