force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotalVendasAF__c.field-meta.xml
<CustomField>
    <fullName>V_TotalVendasAF__c</fullName>
    <formula>IF(OR(V_TotalVendasYTD__c == null, V_TotalDisputaComercialAF__c == null), 0,  V_TotalVendasYTD__c - V_TotalDisputaComercialAF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Vendas - AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>