force-app/main/default/objects/VN_MetaParticipante__c/fields/V_TotalVendasSEYTD__c.field-meta.xml
<CustomField>
    <fullName>V_TotalVendasSEYTD__c</fullName>
    <label>Total de Vendas SE - YTD</label>
    <summarizedField>VN_Sumarizador__c.V_ResultadoSE__c</summarizedField>
    <summaryFilterItems>
        <field>VN_Sumarizador__c.V_ProcessarMecanicas__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>VN_Sumarizador__c.V_MetaDoParticipante__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>