force-app/main/default/objects/VN_MetaParticipante__c/fields/V_UltimoMesAtualizado__c.field-meta.xml
<CustomField>
    <fullName>V_UltimoMesAtualizado__c</fullName>
    <label>Último Mês Atualizado</label>
    <length>25</length>
    <type>Text</type>
</CustomField>